Bug 94888 - Display "Bad parameter" when trying to access a read/only share on Sharepoint.
Summary: Display "Bad parameter" when trying to access a read/only share on Sharepoint.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.4.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-08 15:46 UTC by Giuseppe Castagno (aka beppec56)
Modified: 2016-10-25 19:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Castagno (aka beppec56) 2015-10-08 15:46:32 UTC
To reproduce:
1) on Sharepoint 2013 make a share read only

2) try to open a file in it;

3) the error "The operation on \\rerpoint\sites\TestSP\Documenti condivisi\Lorem_ipsum.doc was started with an invalid parameter." is shown

Starting with version 5.0.2, you can open the file as read/only and no error is show.
With LO versions before 5.0.2 you can't open a UNC share because of issue 60381.

Found another Windows API error not correctly detected by LO.

Worked out a patch, tested ok.
I'll push it to Gerrit.
Comment 1 Giuseppe Castagno (aka beppec56) 2015-10-09 12:32:36 UTC
Set as new, since the patch I pushed to Gerrit solved it.
Comment 2 Commit Notification 2015-10-11 06:19:30 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b49a2f7373e950efc3fe11b89309313ac69c1e1f

tdf#94888: Accessing Sharepoint r/o share through UNC path does not work

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Giuseppe Castagno (aka beppec56) 2015-10-14 08:22:58 UTC
Checked with today daily master build.
Issue fixed.

The issue is trivial, IMHO it can be backported to libreoffice-5.0
Comment 4 Commit Notification 2015-10-16 08:36:22 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a75c72495ed6014d6c84fdead14bef68ea32858&h=libreoffice-5-0

tdf#94888: Accessing Sharepoint r/o share through UNC path does not work

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.