tdf#94888: Accessing Sharepoint r/o share through UNC path does not work

Added a Windows API missing error.

The error added:

ERROR_CANT_ACCESS_FILE
returned when a file cannot be accessed by the system.

Mapped to existent osl_File_E_.... for compatibility.

Change-Id: Ia68cdf761a62db8960b143a69ccfa3e12fc6eac5